--- a/aula_3/aula_3.ipynb
+++ b/aula_3/aula_3.ipynb
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1357,7 @@
     "plt.title('Popularidade dos albúns do Rolling Stones na última década (top 10 albúns)')\n",
     "plt.legend(labels, loc='best')\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
